k8s/App/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avaliacao-infra
  labels:
    app: avaliacao-infra
spec:
  replicas: 2
  selector:
    matchLabels:
      app: avaliacao-infra
  template:
    metadata:
      labels:
        app: avaliacao-infra
    spec:
      containers:
      - name: avaliacao-infra
        image: $IMAGE_DA_SUA_APLICACAO
        port: $PORT
        livenessProbe:
          httpGet:
            path: /
            port: $PORT
            initialDelaySeconds: 30
            periodSeconds: 60
